--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,6 +38,16 @@
   border-bottom: 1px solid rgb(4, 30, 66);
 }
 
+.container .hover_border {
+  margin-top: 3px;
+  width: 32px;
+  height: 2px;
+
+  background: #041e42;
+}
+
+/* Header Frame  */
+
 .header_frame {
   position: relative;
   margin-top: 47px;
@@ -572,3 +582,148 @@
 }
 
 /*Selling product frame finished-*/
+
+/*SPEC PRODUCT*/
+
+.home_page .spec_product_frame {
+  position: relative;
+  margin-top: 69px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.spec_product_frame .container {
+  flex-direction: column;
+}
+
+.container .spec_product_wrapper {
+  position: relative;
+  margin-top: 35px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.spec_product_wrapper .big_product_box {
+  padding: 30px;
+  position: relative;
+  width: 664px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+
+  background: #f3f5f6;
+  border-radius: 6px;
+}
+
+.big_product_box .big_product_content {
+  width: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.big_product_content span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.big_product_content p {
+  margin: 7px 0;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 38px;
+
+  color: #041e42;
+}
+
+.big_product_content a {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.big_product_box img {
+  position: absolute;
+  width: 322px;
+  height: 309px;
+  right: 5%;
+}
+
+.spec_product_wrapper .small_product_wrapper {
+  margin-left: 30px;
+  width: 620px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.small_product_wrapper .small_product_box {
+  position: relative;
+  padding: 30px;
+  width: 293px;
+  height: 170px;
+
+  display: flex;
+  flex-direction: row;
+
+  box-sizing: border-box;
+  background: #bad0db;
+  border-radius: 6px;
+}
+
+.small_product_box:nth-child(odd) {
+  margin-right: 30px;
+}
+
+.small_product_box .small_product_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.small_product_content strong {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #041e42;
+}
+
+.small_product_content span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+
+  color: #626974;
+}
+
+.small_product_box img {
+  position: absolute;
+  right: 10%;
+  top: 40px;
+}
