--- a/public/css/home.css
+++ b/public/css/home.css
@@ -725,5 +725,9 @@
 .small_product_box img {
   position: absolute;
   right: 10%;
-  top: 40px;
+  bottom: 15px;
 }
+
+/*SPEC PRODUCT FINISHED*/
+
+/*TV publishing started*/
