--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,6 +13,12 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.container .category_top div {
+  display: flex;
+  flex-direction: row;
+}
+
 .container .category_top span {
   color: rgb(4, 30, 66);
 
@@ -25,6 +31,7 @@
 }
 
 .container .category_top a {
+  margin-left: 30px;
   color: rgb(4, 30, 66);
   font-family: "Jost";
   font-size: 15px;
@@ -44,6 +51,148 @@
   height: 2px;
 
   background: #041e42;
+}
+
+/*Product*/
+
+.container .next_prev_box {
+  width: 25px;
+}
+
+.container .next_prev_box img {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+
+.container .product_boxes .prooduct_box {
+  width: 306px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.container .prooduct_box .product_img_box {
+  width: 100%;
+  height: 280px;
+}
+
+.container .product_img_box .hover_box {
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.container .hover_box button {
+  margin-bottom: 10px;
+  width: 260px;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: none;
+  outline: none;
+
+  border-radius: 6px;
+  box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
+  background: rgb(0, 83, 246);
+
+  color: rgb(68, 50, 151);
+  font-family: "Jost";
+  font-style: normal;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 23px;
+}
+
+.container .product_img_box:hover .hover_box {
+  display: flex;
+}
+
+.container .product_content_box {
+  padding: 5px 22px;
+  box-sizing: border-box;
+  width: 100%;
+  height: auto;
+}
+
+.container .product_content_box .product_title {
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+}
+
+.container .product_content_box .product_desc {
+  margin-top: 7px;
+  height: 56px;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+}
+
+.container .product_content_box .review_box {
+  margin-top: 7px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .review_box img {
+  margin-right: 5px;
+}
+
+.container .review_box span {
+  margin-left: 10px;
+
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+}
+
+.container .product_content_box .price_box {
+  margin-top: 10px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .price_box strong {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+}
+
+.container .price_box span {
+  margin-left: 10px;
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-decoration-line: line-through;
 }
 
 /* Header Frame  */
@@ -413,16 +562,6 @@
   justify-content: space-between;
 }
 
-.product_wrapper .next_prev_box {
-  width: 25px;
-}
-
-.next_prev_box img {
-  position: absolute;
-  top: 50%;
-  cursor: pointer;
-}
-
 .product_wrapper .product_boxes {
   position: relative;
   width: 1224px;
@@ -430,136 +569,6 @@
 
   display: flex;
   flex-direction: row;
-}
-
-.product_boxes .prooduct_box {
-  width: 306px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.prooduct_box .product_img_box {
-  width: 100%;
-  height: 280px;
-}
-
-.product_img_box .hover_box {
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-.hover_box button {
-  margin-bottom: 10px;
-  width: 260px;
-  height: 50px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  border: none;
-  outline: none;
-
-  border-radius: 6px;
-  box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
-  background: rgb(0, 83, 246);
-
-  color: rgb(68, 50, 151);
-  font-family: "Jost";
-  font-style: normal;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 23px;
-}
-
-.product_img_box:hover .hover_box {
-  display: flex;
-}
-
-.prooduct_box .product_content_box {
-  padding: 5px 22px;
-  box-sizing: border-box;
-  width: 100%;
-  height: auto;
-}
-
-.product_content_box .product_title {
-  color: rgb(98, 105, 116);
-  font-family: Jost;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0%;
-  text-transform: uppercase;
-}
-
-.product_content_box .product_desc {
-  margin-top: 7px;
-  height: 56px;
-  color: rgb(4, 30, 66);
-  font-family: Jost;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 28px;
-  letter-spacing: 0%;
-}
-
-.product_content_box .review_box {
-  margin-top: 7px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.review_box img {
-  margin-right: 5px;
-}
-
-.review_box span {
-  margin-left: 10px;
-
-  color: rgb(98, 105, 116);
-  font-family: Jost;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0%;
-}
-
-.product_content_box .price_box {
-  margin-top: 10px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.price_box strong {
-  color: rgb(4, 30, 66);
-  font-family: Jost;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 26px;
-  letter-spacing: 0%;
-}
-
-.price_box span {
-  margin-left: 10px;
-  color: rgb(98, 105, 116);
-  font-family: Jost;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0%;
-  text-decoration-line: line-through;
 }
 
 .home_page .adv_frame {
@@ -731,3 +740,55 @@
 /*SPEC PRODUCT FINISHED*/
 
 /*TV publishing started*/
+
+.home_page .tv_frame {
+  position: relative;
+  margin-top: 69px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tv_frame .container {
+  flex-direction: column;
+}
+
+.container .tv_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_production_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_production_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tv_product_box .product_img {
+  width: 100%;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
