--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,10 @@
   flex-direction: column;
 }
 
+.white svg {
+  filter: brightness(0) invert(1);
+}
+
 .container .category_top {
   width: 100%;
   height: auto;
@@ -791,4 +795,141 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+/* Event publish started */
+
+.home_page .event_frame {
+  position: relative;
+  margin-top: 69px;
+  width: 100%;
+  height: 632px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  background-image: url("../images/icons/event_bg.png");
+}
+
+.event_frame .container {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .event_content_box {
+  width: 340px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.event_content_box .event_title {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+  text-transform: capitalize;
+
+  color: #ffffff;
+}
+
+.event_content_box .timer_wrapper {
+  margin: 30px 0px;
+  display: flex;
+  flex-direction: row;
+}
+
+.timer_wrapper .timer_box {
+  width: 82px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.timer_box strong {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 48px;
+
+  color: #ffffff;
+}
+
+.timer_box span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #ffffff;
+}
+
+.event_content_box a {
+  width: 140px;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: capitalize;
+
+  background: #ffffff;
+
+  border: 1px solid #ffffff;
+  border-radius: 6px;
+
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.container .event_product_wrapper {
+  width: 930px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.event_product_wrapper .event_product_boxes {
+  position: relative;
+  width: auto;
+  height: auto;
+
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.event_product_boxes .event_product_box {
+  margin-right: 8px;
+  /*width: 265px;*/
+  height: 392px;
+
+  display: flex;
+  flex-direction: column;
+  border-radius: 6px;
+
+  background-color: #ffffff;
+}
+
+.event_product_box .event_product_image {
+  width: 100%;
+  height: 220px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 80px;
 }
