--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,324 +1,540 @@
-html , body{
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-p{
-    margin: 0;
+p {
+  margin: 0;
 }
 
 /* NAVBAR  STARTED */
 
-.container{
-    position: relative;
-    width: 1320px;
-    height: auto;
+.container {
+  position: relative;
+  width: 1320px;
+  height: auto;
 
-    display: flex;
+  display: flex;
 }
 
+.navbar_frame {
+  position: relative;
+  width: 100%;
+  height: 145px;
 
-.navbar_frame{
-    position:relative;
-    width: 100%;
-    height: 145px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
-    background: rgb(68, 50, 151);
+  background: rgb(68, 50, 151);
 }
-.navbar_frame .container{
-    padding: 20px 0 14px;
-    flex-direction: column;
-}
-
-.navbar_frame .navbar_top{
-    width: 100%;
-    height: 50px;
-
-    display: flex;
-    flex-direction: row;
+.navbar_frame .container {
+  padding: 20px 0 14px;
+  flex-direction: column;
 }
 
-.navbar_frame .navbar_top > a img{
-    width: 117px;
-    height: 36px;
-    margin-right: 76px;
+.navbar_frame .navbar_top {
+  width: 100%;
+  height: 50px;
 
-
+  display: flex;
+  flex-direction: row;
 }
 
-.navbar_frame .navbar_top .search_box{
-    padding: 10px 17px;
-    width: auto;
-    height: auto;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.navbar_frame .navbar_top > a img {
+  width: 117px;
+  height: 36px;
+  margin-right: 76px;
 }
 
-.navbar_frame .navbar_top  .nav_search_frame{
-    width: 650px;
-    height: 50px;
+.navbar_frame .navbar_top .search_box {
+  padding: 10px 17px;
+  width: auto;
+  height: auto;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.navbar_frame .navbar_top .nav_top_menu{
-    margin-left: 59px;
-    width: 416px;
-    height: 50px;
+.navbar_frame .navbar_top .nav_search_frame {
+  width: 650px;
+  height: 50px;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #fff;
 }
 
-.navbar_frame .search_box .category_list{
-    width: 166px;
-    height: 30px;
+.navbar_frame .navbar_top .nav_top_menu {
+  margin-left: 59px;
+  width: 416px;
+  height: 50px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    border-right: 1px solid #d6d6d6;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.navbar_frame .category_list select{
-     width: 140px;
-    height: 30px;
+.navbar_frame .search_box .category_list {
+  width: 166px;
+  height: 30px;
 
-    border: none;
-    outline: none;
-    color: rgb(4, 30, 66);
-    font-family: Jost;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
+  border-right: 1px solid #d6d6d6;
 }
 
-.navbar_frame .nav_search_frame .search_icon_box{
-    width: 50px;
-    height: 50px;
+.navbar_frame .category_list select {
+  width: 140px;
+  height: 30px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f5c34b;
-    border-radius: 0 6px 6px 0;
-
-
+  border: none;
+  outline: none;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
 }
-.navbar_frame .search_icon_box img{
-    width: 20px;
-    height: 20px;
+
+.navbar_frame .nav_search_frame .search_icon_box {
+  width: 50px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f5c34b;
+  border-radius: 0 6px 6px 0;
+}
+.navbar_frame .search_icon_box img {
+  width: 20px;
+  height: 20px;
 }
 
 .navbar_frame .nav_top_menu .top_menu_box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
 }
-.navbar_frame .top_menu_box .box_icon_box{
-    width: 54px;
-    height: 50px;
-    margin-right: 16px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.navbar_frame .top_menu_box .box_icon_box {
+  width: 54px;
+  height: 50px;
+  margin-right: 16px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.navbar_frame .box_icon_box img{
-    width: 22px;
-    height: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.navbar_frame .box_info_box span{
-    /* [object Object] */
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-.navbar_frame .box_info_box strong{
-    /* [object Object] */
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
+.navbar_frame .box_icon_box img {
+  width: 22px;
+  height: 22px;
 }
 
-.navbar_frame .top_menu_box  .box_info_box{
-    display: flex;
-    flex-direction: column;
-
+.navbar_frame .box_info_box span {
+  /* [object Object] */
+  color: rgb(255, 255, 255);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
 }
-.navbar_frame .search_box input{
-    margin-left: 12px;
-    width: 387px;
-    height: 22px;
-
-    color: rgb(98, 105, 116);
-    font-family: Jost;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
-
-    border: none;
-    outline: none;
-}
-
-.navbar_frame .box_icon_box .basket_count{
-    width: 15px;
-    height: 15px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 50%;
-
-    color: rgb(11, 30, 64);
-    font-family: Jost;
-    font-size: 8px;
-    font-weight: 700;
-    line-height: 10px;
-    letter-spacing: 0%;
-    text-align: left;
-
-    position: absolute;
-    right: -2px;
-    top: -3px;
-    background: #f5c34b;
+.navbar_frame .box_info_box strong {
+  /* [object Object] */
+  color: rgb(255, 255, 255);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-.navbar_frame .navbar_bott{
-    margin-top: 20px;
-    width: 100%;
-    height: 40px;
+.navbar_frame .top_menu_box .box_info_box {
+  display: flex;
+  flex-direction: column;
+}
+.navbar_frame .search_box input {
+  margin-left: 12px;
+  width: 387px;
+  height: 22px;
 
-    display: flex;
-    flex-direction: row;
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
 
-    border-top: 1px solid #5746a1;
+  border: none;
+  outline: none;
+}
+
+.navbar_frame .box_icon_box .basket_count {
+  width: 15px;
+  height: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+
+  color: rgb(11, 30, 64);
+  font-family: Jost;
+  font-size: 8px;
+  font-weight: 700;
+  line-height: 10px;
+  letter-spacing: 0%;
+  text-align: left;
+
+  position: absolute;
+  right: -2px;
+  top: -3px;
+  background: #f5c34b;
+}
+
+.navbar_frame .navbar_bott {
+  margin-top: 20px;
+  width: 100%;
+  height: 40px;
+
+  display: flex;
+  flex-direction: row;
+
+  border-top: 1px solid #5746a1;
 }
 
 .navbar_frame .navbar_bott .navbar_bott_menu_box {
-    width: auto;
-    height: auto;
-    margin-top: 10px;
+  width: auto;
+  height: auto;
+  margin-top: 10px;
 
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.navbar_frame .navbar_bott .browse_box{
-    width: 185px;
-    height: 30px;
+.navbar_frame .navbar_bott .browse_box {
+  width: 185px;
+  height: 30px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-right: 1px solid #5746a1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-right: 1px solid #5746a1;
 }
 
-.navbar_frame .browse_box img{
-    width: 20px;
-    height: 18px;
-    margin-right: 10px;
+.navbar_frame .browse_box img {
+  width: 20px;
+  height: 18px;
+  margin-right: 10px;
 }
-.navbar_frame .browse_box span{
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-
-.navbar_frame .navbar_bott_menu_box .navbar_route_menu{
-    margin-left: 12px;
-    width: 690px;
-
-    /*width: auto;*/
-    /*height: 40px;*/
-
-    display: flex;
-    flex-direction: row;
-
+.navbar_frame .browse_box span {
+  color: rgb(255, 255, 255);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-.navbar_frame .navbar_route_menu .router_menu{
-    width: auto;
-    height: 41px;
-    margin-right: 20px;
+.navbar_frame .navbar_bott_menu_box .navbar_route_menu {
+  margin-left: 12px;
+  width: 690px;
 
-    display: flex;
+  /*width: auto;*/
+  /*height: 40px;*/
 
-}
-.navbar_frame .router_menu a{
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-    text-align: left;
+  display: flex;
+  flex-direction: row;
 }
 
-.navbar_frame .router_menu a.active{
-    color: #f5c34b;
+.navbar_frame .navbar_route_menu .router_menu {
+  width: auto;
+  height: 41px;
+  margin-right: 20px;
+
+  display: flex;
+}
+.navbar_frame .router_menu a {
+  color: rgb(255, 255, 255);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-.navbar_frame .navbar_bott_menu_box .sorting_menu{
-    display: flex;
-    flex-direction: row;
-
+.navbar_frame .router_menu a.active {
+  color: #f5c34b;
 }
 
-.navbar_frame .sorting_menu span{
-    margin-left: 20px;
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
+.navbar_frame .navbar_bott_menu_box .sorting_menu {
+  display: flex;
+  flex-direction: row;
 }
 
-
-
-
-
-
-
-
-
+.navbar_frame .sorting_menu span {
+  margin-left: 20px;
+  color: rgb(255, 255, 255);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+}
 
 /* NAVBAR FINISHED */
+
+/* Footer Frame */
+
+.footer_frame {
+  position: relative;
+  padding: 90px 0 20px;
+
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  background: #f3f5f6;
+}
+
+.footer_spec_title {
+  display: block;
+  margin-bottom: 30px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+
+  color: #041e42;
+}
+
+.footer_frame .container {
+  flex-direction: column;
+}
+
+.container .footer_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.top .footer_contact_box {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_contact_box .footer_contact_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_contact_main img {
+  width: 35px;
+  height: 30px;
+}
+
+.footer_contact_main div {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_contact_main div strong {
+  margin-bottom: 30px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.footer_contact_main div span {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.footer_support_box {
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_support_box a {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 40px;
+
+  color: #041e42;
+}
+
+.footer_media_box {
+  margin-left: 55px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_media_box .footer_media_main {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_media_main .media_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.media_box i {
+  margin-right: 25px;
+}
+
+.footer_media_main .mobile_app_box {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.mobile_app_box img {
+  width: 24px;
+  height: 16px;
+}
+
+.mobile_app_box span {
+  margin-left: 20px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+
+  color: #041e42;
+}
+
+.footer_media_main .card_box {
+  width: 272px;
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+}
+
+.container .footer_bottom {
+  margin-top: 90px;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+  border-top: 1px solid #eaeaea;
+}
+
+.footer_bottom .footer_main {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_main .footer_bottom_left {
+  width: 940px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_bottom_left span {
+  margin-right: 60px;
+  color: rgb(4, 30, 66);
+  font-family: "Jost";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_main .footer_bottom_right {
+  width: 400px;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.footer_bottom_right .footer_select_box {
+  padding: 10px 20px;
+  width: 180px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background: #ffffff;
+  box-sizing: border-box;
+
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+}
+
+.footer_select_box span {
+  font-family: "Jost";
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #626974;
+}
+
+.footer_select_box select {
+  margin-left: 20px;
+  width: 70px;
+  height: 90%;
+
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+
+  color: #041e42;
+}
