--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,3 +1,7 @@
+:root {
+  --font: "Jost";
+}
+
 html,
 body {
   margin: 0;
@@ -148,7 +152,7 @@ p {
 .navbar_frame .box_info_box span {
   /* [object Object] */
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
